(teranode split) release socket thread when handling block request